POR/RefEdge/src/objects/Interview_Topic__c.object
<CustomObject>
    <description>Custom Object to add Interview Topics for reference Interview Content types(Bound 6).</description>
    <fields>
        <fullName>Content_File__c</fullName>
        <formula>IF(ISBLANK(Content_Id__c), &apos;No Content&apos;, HYPERLINK(&apos;/&apos;+Content_Id__c , &apos;View Content&apos;))</formula>
        <label>Content File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Id__c</fullName>
        <label>Content Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interview Question</label>
        <referenceTo>Interview_Question__c</referenceTo>
        <relationshipLabel>Interview Topics</relationshipLabel>
        <relationshipName>Interview_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Interview__c</fullName>
        <label>Reference Interview</label>
        <referenceTo>Reference_Interview__c</referenceTo>
        <relationshipLabel>Interview Topics</relationshipLabel>
        <relationshipName>Interview_Topics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transcript__c</fullName>
        <description>Copy the transcript of this interview topic from a text edit such as Notepad. Other applications may insert special characters that won’t display properly.</description>
        <inlineHelpText>Copy the transcript of this interview topic from a text edit such as Notepad. Other applications may insert special characters that won’t display properly.</inlineHelpText>
        <label>Transcript</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <description>This is the YouTube or BrightCove hyperlink to the media file for this interview topic.</description>
        <inlineHelpText>This is the YouTube or BrightCove hyperlink to the media file for this interview topic.</inlineHelpText>
        <label>Media URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Url_Embed__c</fullName>
        <label>Video Url Embed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>active</label>
        <type>Checkbox</type>
    </fields>
    <label>Interview Topic</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>Interview Topic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>